Closed Bug 1543034 Opened 5 years ago Closed 5 years ago

Perma js/src/jit/BaselineIC.h:600:14: error: unused variable 'magic' [-Werror,-Wunused-variable] when Gecko 68 merges to Beta on 2018-05-06

Categories

(Core :: JavaScript Engine: JIT, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: aryx)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/c59414352a98
only call checkMagic in BaselineIC if diagnostic assert is enabled to prevent warning about unused variable. r=jonco
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Assignee: nobody → aryx.bugmail
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/b58bc3002952
ifdef traceMagic to avoid warning about unused variable. r=tcampbell
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: