Bug 1543034 - only call checkMagic in BaselineIC if diagnostic assert is enabled to prevent warning about unused variable. r=jonco

Differential Revision: https://phabricator.services.mozilla.com/D26686